--- a/blog/.github/workflows/hugo.yml
+++ b/blog/.github/workflows/hugo.yml
@@ -15,14 +15,16 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: true
-          fetch-depth: 0
           
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -36,20 +38,14 @@ jobs:
       - name: Build
         working-directory: blog
         run: |
-          hugo --minify --baseURL "https://xziguoux.github.io/blog/"
-        
+          echo "HUGO_BASEURL=https://moxiaozi.com" >> $GITHUB_ENV
+          hugo --minify
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./blog/public
+          path: blog/public
 
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
