--- a/blog/config.toml
+++ b/blog/config.toml
@@ -3,22 +3,27 @@ languageCode = 'zh-cn'
 title = '我的博客'
 theme = 'archie'
 
+pygmentsstyle = "monokai"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
 # 确保生成 index.html
 uglyURLs = false
 relativeURLs = false
 
 # 主题配置
 [params]
-    # mode="auto"
-    mode="dark"
+    mode="auto"
+    # mode="dark"
     useCDN=true
     subtitle = "个人博客"
+    copyright = "© moxiaozi"
+    author = "moxiaozi"  # 作者名称
     
-    # 社交媒体链接
-    social = [
-        {name = "GitHub", type = "social", url = "https://github.com/xziguoux"},
-        {name = "Twitter", type = "social", url = "https://twitter.com/xziguoux"}
-    ]
+[[params.social]]
+name = "GitHub"
+icon = "github"
+url = "https://github.com/xziguoux"
 
 [[menu.main]]
 name = "首页"
@@ -34,3 +39,15 @@ weight = 2
 name = "关于"
 url = "/about"
 weight = 3
+copyright = "© Athul"
+
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 4
+
+[markup]
+  [markup.tableOfContents]
+    startLevel = 1    # 从一级标题开始显示
+    endLevel = 6      # 到六级标题结束
+    ordered = false   # 使用无序列表
