--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -15,19 +15,13 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: true
-          
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
           
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
@@ -54,6 +48,16 @@ jobs:
         with:
           path: blog/public
 
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+          
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3 
+        uses: actions/deploy-pages@v3
