--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -54,6 +54,9 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v3
