--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -49,8 +49,14 @@ jobs:
           path: blog/public
 
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      pages: write
+      id-token: write
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
