--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -10,8 +10,6 @@ permissions:
   pages: write
   id-token: write
 
-
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,38 +18,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-          
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
           extended: true
 
-      - name: Debug Info
+      - name: Build and Debug
         working-directory: blog
         run: |
-          pwd
-          ls -la
-          echo "=== Checking themes ==="
-          ls -la themes/
-          echo "=== Building site ==="
+          echo "Building site..."
           hugo --minify
-          echo "=== Checking public directory ==="
+          echo "Output in blog/public:"
           ls -la public/
-          echo "=== Checking index.html ==="
-          cat public/index.html || echo "index.html not found"
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v1
         with:
           path: blog/public
+          artifact_name: github-pages
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     permissions:
       pages: write
       id-token: write
@@ -59,3 +52,7 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          artifact_name: github-pages
+
